src/objects/CPQ_Chevron_Stages__mdt.object
<CustomObject>
    <fields>
        <fullName>Approval_Stage_By_GBU__c</fullName>
        <label>Approval Stage By GBU</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GBU__c</fullName>
        <label>GBU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Name__c</fullName>
        <label>Module Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CPQ Chevron Stage</label>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>GBU__c</columns>
        <columns>Approval_Stage_By_GBU__c</columns>
        <columns>Module_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>CPQ Chevron Stages</pluralLabel>
</CustomObject>